src/main/java/com/example/uniport/api/common/error/ApiException.java
package com.example.uniport.api.common.error;

import java.util.Map;

public class ApiException extends RuntimeException {
	private final ErrorCode errorCode;
	private final Map<String, Object> details;

	public ApiException(ErrorCode errorCode) {
		super(errorCode.getDefaultMessage());
		this.errorCode = errorCode;
		this.details = null;
	}

	public ApiException(ErrorCode errorCode, String message) {
		super(message);
		this.errorCode = errorCode;
		this.details = null;
	}

	public ApiException(ErrorCode errorCode, String message, Map<String, Object> details) {
		super(message);
		this.errorCode = errorCode;
		this.details = details;
	}

	public ErrorCode getErrorCode() {
		return errorCode;
	}

	public Map<String, Object> getDetails() {
		return details;
	}
}

